--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,19 @@
+altgraph==0.17.4
 click==8.1.8
 colorama==0.4.6
+iniconfig==2.1.0
 markdown-it-py==3.0.0
 mdurl==0.1.2
+packaging==24.2
+pefile==2023.2.7
+pluggy==1.5.0
 Pygments==2.19.1
+pyinstaller==6.13.0
+pyinstaller-hooks-contrib==2025.3
+pytest==8.3.5
+pywin32-ctypes==0.2.3
 rich==14.0.0
+setuptools==78.1.0
 shellingham==1.5.4
 typer==0.15.2
 typing_extensions==4.13.2
